# DeHendrix

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  _devirt.ll  _devirt_opt.ll  _init_devirt.ll  _init_opt.ll
bindings/mcp/: README.md  dehendrix_mcp.py
bindings/python/: pydeobf.cpp  setup.py
examples/: devirt_example.py
include/deobf/: cfg.h  cfg_recovery.h  evaluator.h  iat_cracker.h  ir.h  lifter.h  llvm_emitter.h  memory.h  passes.h  pe_loader.h  pipeline.h  segment_eval.h  target.h
src/eval/: cfg_recovery.cpp  guided_eval.cpp  pipeline.cpp  segment_eval.cpp  target.cpp
src/ir/: cfg.cpp  function.cpp  pe_loader.cpp  value.cpp
src/lifter/: x64_lifter.cpp
src/lower/: llvm_emitter.cpp
src/memory/: byte_memory.cpp
src/passes/: iat_cracker.cpp  transforms.cpp
tests/: deobf_chain_test.md  deobf_chain_test2.md  saturn_test_base.md  test_cfg.cpp  test_cfg_recovery.cpp  test_ir_passes.cpp  test_memory.cpp  test_native_cfg.cpp  test_output_base_entry.md  test_segment_eval.cpp  test_vm_synth.cpp  tvm_entries_base.json
tools/: cli_main.cpp
tools/ida/: dehendrix_ida.py
